--- a/Bookkeeping/Bookkeeping/Bookkeeping.csproj
+++ b/Bookkeeping/Bookkeeping/Bookkeeping.csproj
@@ -261,7 +261,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\page.js" />
     <Content Include="Services\BookkeepingModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BookkeepingModel.edmx</DependentUpon>
@@ -317,7 +316,9 @@
       <DependentUpon>BookkeepingModel.edmx</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Helper\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
